Add back whitelogo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'application' %>
     <script type="text/javascript">
       window.blackLogo = "<%= image_url("black_logo.png") %>"
+      window.whiteLogo = "<%= image_url("white_logo.png") %>"
       window.preHome = "<%= image_url("pre_home.jpg") %>"
       window.pinkSunset = "<%= image_url("pink_sunset.jpg") %>"
       </script>
