--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -101,18 +101,49 @@
 
 }
 
+// logout
+.logout-button {
+  position: relative;
+  bottom: -380px;
+}
+
+.logout-msg {
+  // opacity: 0.6;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  height: 30px;
+  width: 150px;
+  margin-left: 24px;
+  text-align: center;
+  font-size: 16px;
+  padding-top: 11px;
+  background-color: #1db954c4;
+}
+.logout-msg:hover {
+  // opacity: 1;
+  background-color: #1db954;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+
+
 // profile 
 .white-profile-logo {
 
 }
 
 .white-profile {
-  color: #1db954;
+  // color: #1db954;
+  color: white;
   position: relative;
   font-size: 14px;
-  left: -25px;
-  bottom: -425px;
+  left: 9px;
+  bottom: -340px;
+}
 
+.white-profile:hover {
+  color: #1db954;
+  transition-duration: 0.3s;
 }
 
 // MUSIC PLAYER
