--- a/app/assets/stylesheets/api/pre_home.scss
+++ b/app/assets/stylesheets/api/pre_home.scss
@@ -1,13 +1,10 @@
 
 .pre-login {
+  // TEST
   // background-color: lightcoral;
-  min-height: 765px;
   width: 100%;
   position: relative;
-  // top: -47px;
-  margin: 0; 
-  height: 100%; 
-
+  height: 100vh;
   background-image: image-url("pink_sunset.jpeg");
   background-size: cover;
 
@@ -91,6 +88,10 @@
   top: -100px;
 }
 
+.welcome-signup-wrapper {
+  display: flex;
+  justify-content: center;
+}
 
 .welcome-signup {
   border: 1px solid transparent;
@@ -98,7 +99,6 @@
   color: white;
   width: 250px;
   display: block;
-  margin-left: 595px;
   cursor: pointer;
   border-radius: 50px;
   margin-top: 30px;
@@ -106,8 +106,8 @@
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 2px;
-  
 }
+
 .welcome-signup:hover {
   background: #1ed760;
   transition-duration: 0.3s;
