--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
     <script type="text/javascript">
       window.blackLogo = "<%= image_url("black_logo.png") %>"
       window.whiteLogo = "<%= image_url("white_logo.png") %>"
-      window.preHome = "<%= image_url("pre_home.jpg") %>"
       window.pinkSunset = "<%= image_url("pink_sunset.jpg") %>"
+      window.homeSelected = "<%= image_url("home_selected.png") %>"
+      window.home = "<%= image_url("home.png") %>"
+      window.library = "<%= image_url("library.png") %>"
+      window.search = "<%= image_url("search.png") %>"
       </script>
   </head>
 
