Split up Greeting component and Create a Navbar Component

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -2,10 +2,10 @@
 // profile background COLOR #222326
 
 // TEST ( to logout )
-.logout {
-  position: relative;
-  left: 500px;
-}
+// .logout {
+//   position: relative;
+//   left: 500px;
+// }
 
 // ALL
 .logged-in {
