Add subNavbars and Profile

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -31,7 +31,8 @@
 }
 
 .selected-home-tab {
-  border-bottom: 3px solid #1db954;
+  padding-bottom: 3px;
+  border-bottom: 2px solid #1db954;
   opacity: 1 !important;
   // @@@@@  USED !IMPORTANT @@@@@
 }
