--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -9,7 +9,7 @@
 
 .selected-tab {
   // font-size: 100px;
-  opacity: 1 !important
+  opacity: 1 !important;
   // @@@@@@@ USED !IMPORTANT @@@@@@@@
 }
 .green-selected {
@@ -109,7 +109,9 @@
 }
 
 // home
+// .home-button {
 
+// }
 .white-home-logo {
 }
 
@@ -146,49 +148,53 @@
 }
 
 // logout
-.logout-button {
-  position: relative;
-  bottom: -390px;
-}
+// .logout-button {
+//   position: relative;
+//   bottom: -390px;
+// }
 
-.logout-msg {
-  // opacity: 0.6;
-  border: 1px solid transparent;
-  border-radius: 50px;
-  height: 25px;
-  width: 150px;
-  margin-left: 24px;
-  text-align: center;
-  font-size: 16px;
-  padding-top: 8px;
-  background-color: #1db954c4;
-}
-.logout-msg:hover {
-  // opacity: 1;
-  background-color: #1db954;
-  cursor: pointer;
-  transition-duration: 0.3s;
-}
+// .logout-msg {
+//   // opacity: 0.6;
+//   border: 1px solid transparent;
+//   border-radius: 50px;
+//   height: 25px;
+//   width: 150px;
+//   margin-left: 24px;
+//   text-align: center;
+//   font-size: 16px;
+//   padding-top: 8px;
+//   background-color: #1db954c4;
+// }
+// .logout-msg:hover {
+//   // opacity: 1;
+//   background-color: #1db954;
+//   cursor: pointer;
+//   transition-duration: 0.3s;
+// }
 
 
 // profile 
+.selected-profile {
+  color: #1db954 !important;
+}
+
 .white-profile-logo {
 
 }
 
-.white-profile {
-  // color: #1db954;
+.profile-button {
   color: white;
   position: relative;
   font-size: 14px;
-  left: 9px;
-  bottom: -360px;
+  left: 23px;
+  bottom: -420px;
 }
 
-.white-profile:hover {
+.profile-button:hover {
   color: #1db954;
   transition-duration: 0.3s;
 }
+
 
 // MUSIC PLAYER
 .music-player {
