Add frontend routes

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -1,11 +1,10 @@
-// @@@@@@@  TEST  @@@@@@@@@
 .navbar-library {
-  left: 565px;
-  height: 500px;
-  width: 500px;
+  left: 450px;
+  // height: 500px;
+  width: 600px;
   position: relative; 
   top: -660px; 
-  overflow: hidden;
+  // overflow: hidden;
   padding-right: 350px;
   // background-color:#000000f5
 }
@@ -42,8 +41,8 @@
 // PLAYLIST BUTTON
 .library-new-playlist {
   position: relative;
-  top: -45px;
-  left: 690px;
+  top: -42px;
+  left: 775px;
   cursor: pointer;
 }
 
