--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -1,6 +1,16 @@
+// .navbar-library {
+//   left: 565px;
+//   // height: 500px;
+//   width: 500px;
+//   position: relative; 
+//   top: -660px; 
+//   // overflow: hidden;
+//   padding-right: 350px;
+//   // background-color:#000000f5
+// }
 .navbar-search {
   left: 230px;
-  height: 500px;
+  height: 672px;
   width: 860px;
   position: relative; 
   top: -679px; 
@@ -8,6 +18,10 @@
   padding-right: 350px;
   // background-color:#000000f5
 }
+
+// .search-bar {
+//   height: 50px;
+// }
 
 .search-input {
   position: relative;
