--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -1,7 +1,7 @@
 // @@@@@@@  TEST  @@@@@@@@@
 .navbar-home {
   left: 565px;
-  height: 500px;
+  // height: 500px;
   width: 500px;
   position: relative; 
   top: -660px; 
