--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -4,7 +4,7 @@
   width: 600px;
   position: relative; 
   top: -660px; 
-  // overflow: hidden;
+  overflow: hidden;
   padding-right: 350px;
   // background-color:#000000f5
 }
