--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -51,7 +51,7 @@
   letter-spacing: 2px;
   border: 1px solid transparent;
   border-radius: 50px;
-  background-color: #1db954c4;
+  background-color: rgba(30, 215, 98, 0.842);
   height: 30px;
   width: 140px;
   text-align: center;
@@ -65,6 +65,6 @@
 
 .new-playlist:hover {
   transform: scale(1.1);
-  background-color: #1db954;
+  background-color: #1ED761;
   transition-duration: 0.3s;
 }
