--- a/app/assets/stylesheets/api/createPlaylist.scss
+++ b/app/assets/stylesheets/api/createPlaylist.scss
@@ -87,6 +87,7 @@
   letter-spacing: 2px;
   font-size: 12px;
   // opacity: 0.7;
+  outline: none;
 }
 .playlist-cancel:hover {
   border: 2px solid white;
@@ -106,6 +107,8 @@
   color: white;
   letter-spacing: 2px;
   font-size: 12px;
+  outline: none;
+
 }
 
 .playlist-create:hover {
