Fix Library subnavbar

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -1,11 +1,11 @@
 .navbar-library {
-  left: 450px;
-  // height: 500px;
-  width: 600px;
+  left: 100px;
+  width: 700px;
   position: relative; 
   top: -660px; 
   overflow: hidden;
   padding-right: 350px;
+  padding-left: 230px;
   // background-color:#000000f5
 }
 
@@ -42,7 +42,7 @@
 .library-new-playlist {
   position: relative;
   top: -42px;
-  left: 775px;
+  left: 900px;
   cursor: pointer;
 }
 
