--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -197,10 +197,10 @@
 
 
 // MUSIC PLAYER
-.music-player {
-  background-color: #222326;
-  width: 100%;
-  height: 88px;
-  position: fixed;
-  bottom:0;
-}
+// .music-player {
+//   background-color: #222326;
+//   width: 100%;
+//   height: 88px;
+//   position: fixed;
+//   bottom:0;
+// }
