Fix Library Padding-left CSS

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -1,11 +1,11 @@
 .navbar-library {
-  left: 100px;
+  left: 330px;
   width: 700px;
   position: relative; 
   top: -660px; 
   overflow: hidden;
   padding-right: 350px;
-  padding-left: 230px;
+  // padding-left: 230px;
   // background-color:#000000f5
 }
 
