--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -1,13 +1,13 @@
 .navbar-profile{
-  left: 623px;
+  left: 230px;
   height: 450px;
   width: 800px;
-  position: relative; 
-  top: -700px; 
+  position: relative;
   overflow: hidden;
+  padding-bottom: 400px;
   padding-right: 350px;
-  padding-left: 100px;
-  // background-color:#000000f5
+  padding-left: 500px;
+  background-color: #000000f5;
 }
 
 .profile-list {
