--- a/app/assets/stylesheets/api/music.scss
+++ b/app/assets/stylesheets/api/music.scss
@@ -1,11 +1,12 @@
 .audio-music-player {
+  content: none;
 }
 
 .music-player-container {
   background-color: #222326;
   width: 100%;
   height: 88px;
-  position: relative;
   position: fixed;
   bottom:0;
+  z-index: 100;
 }
