--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
       window.home = "<%= image_url("home.png") %>"
       window.library = "<%= image_url("library.png") %>"
       window.search = "<%= image_url("search.png") %>"
+      window.defaultMusic = "<%= image_url("white-music.png") %>"
+      window.whitePlay = "<%= image_url("white-play.png") %>"
       </script>
   </head>
 
