--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       window.search = "<%= image_url("search.png") %>"
       window.defaultMusic = "<%= image_url("white-music.png") %>"
       window.whitePlay = "<%= image_url("white-play.png") %>"
+      window.redBackground = "<%= image_url("red-background.png") %>"
       </script>
   </head>
 
