--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -1,23 +1,34 @@
-// @@@@@@@  TEST  @@@@@@@@@
+
 .navbar-home {
-  left: 230px;
-  width: 500px;
+  // left: 230px;
   height: 100vh;
-  position: relative;
-  padding-left: 300px;
-  padding-right: 410px;
-  padding-top: 10px;
+  // width: 500px;
+  // position: fixed;
+  padding-left: 200px;
+  // padding-right: 410px;
+  // padding-top: 10px;
   background-color: #000000f5;
-  overflow: hidden;
+  overflow: scroll;
+  // display: flex;
+  // justify-content: center;
+  
+  // overflow-x: hidden;
+  // overflow-y: hidden;
 }
 
+.nav {
+  display: flex;
+  justify-content: center;
+}
 
 .home-tabs {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  text-align: center;
-  padding-top: 10px;
+  // text-align: center;
+  // padding-top: 10px;
+  width: 500px;
+  padding-top: 20px;
 }
 
 // ALL TABS
