--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -18,7 +18,7 @@
 .li-songs {
   // margin: 15px 0;
   height: 40px;
-  width: 850px;
+  width: 100%;
   padding: 20px 0;
   padding-left: 20px;
   padding-right: 200px;
