--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -4,7 +4,7 @@
 
 .songs-component {
   position: relative;
-  left: -50px;
+  // left: -50px;
 }
 
 .ul-songs {
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 0;
+  // padding: 0;
 }
 
 .li-songs {
