Add Modify Title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SpotifyFtp</title>
+    <title>Modify</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
@@ -17,7 +17,6 @@
       window.search = "<%= image_url("search.png") %>"
       window.defaultMusic = "<%= image_url("white-music.png") %>"
       window.whitePlay = "<%= image_url("white-play.png") %>"
-      window.redBackground = "<%= image_url("red-background.png") %>"
       </script>
   </head>
 
