--- a/app/assets/stylesheets/api/artists.scss
+++ b/app/assets/stylesheets/api/artists.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the api/artists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.artist-photo {
+  border: 1px solid transparent;
+  // albums should be square / made it circle for presentation
+  border-radius: 100px;
+  height: 180px;
+  width: 180px;
+  margin-bottom: 20px;
+  background-color: #282828;
+  // if they dont have an album cover
+  // background-image: image-url('white-music.png');
+}
