--- a/app/assets/stylesheets/api/albums.scss
+++ b/app/assets/stylesheets/api/albums.scss
@@ -15,6 +15,7 @@
   grid-template-columns: 180px 180px 180px 180px 180px;
   grid-column-gap: 15px;
   grid-row-gap: 50px;
+  padding-bottom: 100px;
 }
 
 .li-albums {
