--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -1,5 +1,11 @@
 .albumshow-page {
-  background-color: black;
+  padding-left: 230px;
+  height: 100vh;
+  overflow: scroll;
+  background-color: #000000f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .albumshow-photo {
