--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -54,3 +54,22 @@
   padding-bottom: 1px;
 }
 
+// PLAY
+.album-play {
+  font-size: 12px;
+  letter-spacing: 2px;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  background-color: rgba(30, 215, 98, 0.842);
+  height: 40px;
+  width: 140px;
+  text-align: center;
+  color: white;
+  align-self: center;
+}
+
+.album-play:hover {
+  transform: scale(1.1);
+  background-color: #1ED761;
+  transition-duration: 0.3s;
+}
