--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-flow: row wrap;
+  padding-bottom: 200px;
 }
 
 
@@ -129,4 +131,21 @@
   transform: scale(1.1);
   transition-duration: 0.2s;
   cursor: pointer;
+}
+
+////////////////////////
+
+// ALBUM SONGLIST
+.ul-album-songs {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin-top: 30px;
+}
+
+// SONG
+.li-album-song {
+  width: 790px;
+  background-color: white;
+  padding: 10px;
 }
