Update AlbumInfo title width CSS

--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -41,6 +41,7 @@
   // opacity: 1.0 !important;
   font-weight: bold;
   padding-bottom: 5px;
+  width: 300px;
 }
 
 // ARTIST NAME
@@ -146,6 +147,6 @@
 // SONG
 .li-album-song {
   width: 790px;
-  background-color: white;
+  background-color: blue;
   padding: 10px;
 }
