Add music and play icons for songs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
       window.search = "<%= image_url("search.png") %>"
       window.defaultMusic = "<%= image_url("white-music.png") %>"
       window.whitePlay = "<%= image_url("white-play.png") %>"
+      window.whitePlay2 = "<%= image_url("white-play2.png") %>"
+      window.whiteMusic2 = "<%= image_url("white-music2.png") %>"
       </script>
   </head>
 
