Change paddingLeft to marginLeft

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -1,5 +1,5 @@
 .navbar-library-component {
-  padding-left: 230px;
+  margin-left: 230px;
   height: 100vh;
   overflow: scroll;
   background-color: #000000f5;
