--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -1,7 +1,7 @@
 
 .navbar-search {
   height: 100vh;
-  padding-left: 230px;
+  margin-left: 230px;
   position: static; 
   overflow: hidden;
   background-color:#000000f5;
