--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -1,5 +1,5 @@
 .albumshow-page {
-  padding-left: 230px;
+  margin-left: 230px;
   height: 100vh;
   overflow: scroll;
   background-color: #000000f5;
