--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   // width: 500px;
   // position: fixed;
-  padding-left: 230px;
+  margin-left: 230px;
   // padding-right: 410px;
   // padding-top: 10px;
   background-color: #000000f5;
