Add repositioned MusicIcon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       window.library = "<%= image_url("library.png") %>"
       window.search = "<%= image_url("search.png") %>"
       window.defaultMusic = "<%= image_url("white-music.png") %>"
+      window.whiteMusic = "<%= image_url("white-music-copy.png") %>"
       window.whitePlay = "<%= image_url("white-play.png") %>"
       window.whitePlay2 = "<%= image_url("white-play2.png") %>"
       window.whiteMusic2 = "<%= image_url("white-music2.png") %>"
