--- a/app/assets/stylesheets/api/playlist_show.scss
+++ b/app/assets/stylesheets/api/playlist_show.scss
@@ -2,7 +2,8 @@
   margin-left: 230px;
   height: 100vh;
   overflow: scroll;
-  background-color: #000000f5;
+  // background-color: #000000f5;
+  background-color: gray;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,6 +12,21 @@
 }
 
 // PLAYLIST INFO
+.playlistShow-photo-title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.playlistShow-photo-title:hover {
+  // change pointer for now but want to change opacity and add play icon
+  // but only to photo
+  cursor: pointer;
+  // background-image: 
+  opacity: 0.5;
+  box-shadow: 0 0 3px 3px rgba(0,0,0,0.6);
+}
+
 .playlistShow-info {
   display: flex;
   flex-direction: column;
@@ -19,11 +35,34 @@
 }
 
 .playlistShow-photo {
-  background-image: image-url('white-music.png');
+  background-image: image-url('white-music-copy.png');
+  background-size: cover;
   height: 267px;
   width: 267px;
+  margin-bottom: 15px;
+  background-color: black;
+  align-self: center;
 }
 
+.playlistShow-title {
+  font-size: 30px;
+  color: white;
+  // opacity: 1.0 !important;
+  font-weight: bold;
+  width: 300px;
+  margin-bottom: 30px;
+}
+
+// SONGS LENGTH
+.playlistShow-songLength {
+  color: rgb(173, 171, 163);
+  font-size: 12px;
+  letter-spacing: 1px;
+  margin-bottom: 40px;
+  margin-top: 8px;
+}
+
+// PLAYLIST OPTIONS
 .playlistShow-options {
   color: white;
   font-size: 35px;
