Change albumLibrary color

--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -104,7 +104,7 @@
 }
 .album-library {
   cursor: pointer;
-  color: green;
+  color: #1DB051;
   font-size: 12px;
   letter-spacing: 2px;
   width: 180px;
