Change margin for SongArtist

--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -29,9 +29,13 @@
 }
 
 .song-title {
-  margin-left: 15px;
+  margin-left: 20px;
   color: white;
   font-weight: 300;
+}
+
+.song-artist {
+  margin-left: 20px;
 }
 
 .song-artist, .song-album{
