--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -21,8 +21,8 @@
   height: 40px;
   width: 100%;
   padding: 20px 0;
-  padding-left: 20px;
-  padding-right: 200px;
+  // padding-left: 20px;
+  // padding-right: 200px;
 }
 
 .li-songs:hover {
