--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -73,6 +73,7 @@
   color: white;
   align-self: center;
   margin-bottom: 10px;
+  outline: none;
 }
 
 .album-play:hover {
@@ -202,23 +203,27 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #272727;
   min-width: 160px;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px 0 #1a1919;
   right: 0;
   z-index: 1;
+  padding: 5px 0;
 }
 
 .dropdown-content a {
-  color: black;
+  color: rgb(173, 171, 163);
+  font-size: 14px;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
 .song-dropdown a:hover {
-  background-color: #ddd;
+  background-color: #333333;
+  color: white;
+  cursor: pointer;
 }
 
 .show {
