Add demo backgroundColor for now

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -2,7 +2,7 @@
   margin-left: 230px;
   height: 100vh;
   overflow: scroll;
-  background-color: #000000f5;
+  background: linear-gradient(to bottom right, #534C30, black);
   // display: flex; 
   // flex-wrap: wrap;
   // flex-direction: column;
