Add AlbumDropdown CSS

--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -121,18 +121,7 @@
 }
 
 .album-playlist {
-  color: white;
-  font-size: 35px;
-  letter-spacing: 1px;
-  width: 50px;
-  position: relative;
-  top: -15px;
-}
-
-.album-playlist:hover {
-  transform: scale(1.1);
-  transition-duration: 0.2s;
-  cursor: pointer;
+  font-size: 35px !important;
 }
 
 ////////////////////////
@@ -204,7 +193,7 @@
   display: none;
   position: absolute;
   background-color: #272727;
-  min-width: 160px;
+  min-width: 200px;
   overflow: auto;
   box-shadow: 0 0 5px 0 #1a1919;
   right: 0;
