--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -87,7 +87,7 @@
   color: rgb(173, 171, 163);
   font-size: 12px;
   letter-spacing: 1px;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
 }
 
 .album-split-dot {
@@ -122,6 +122,7 @@
 
 .album-playlist {
   font-size: 35px !important;
+  padding: 0px !important;
 }
 
 ////////////////////////
