--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -18,9 +18,9 @@
 
 .li-songs {
   // margin: 15px 0;
-  height: 40px;
-  width: 100%;
-  padding: 20px 0;
+  height: 50px;
+  width: 90%;
+  padding: 10px 20px;
   // padding-left: 20px;
   // padding-right: 200px;
 }
@@ -33,6 +33,7 @@
   margin-left: 20px;
   color: white;
   font-weight: 300;
+  cursor: default;
 }
 
 .song-artist {
@@ -51,4 +52,14 @@
   position: relative;
   top: -4px;
   margin: 0 6px;
+}
+
+.song-index {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.left-song {
+  align-self: center;
 }
