Add background color for Library

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -2,7 +2,10 @@
   margin-left: 230px;
   height: 100vh;
   overflow: scroll;
-  background: linear-gradient(to bottom right, #534C30, black);
+  background: linear-gradient(to bottom right, #232123, black);
+  // background: linear-gradient(to bottom right, #2D3E59, black);
+  // background: linear-gradient(to bottom right, #324455, black);
+
   // display: flex; 
   // flex-wrap: wrap;
   // flex-direction: column;
