Fix top CSS so both modals fit

--- a/app/assets/stylesheets/api/createPlaylist.scss
+++ b/app/assets/stylesheets/api/createPlaylist.scss
@@ -10,7 +10,7 @@
 
 .modal-child {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 400px;
@@ -18,6 +18,12 @@
   text-align: center;
   // TEST
   // background: gray;
+}
+
+// CREATE PLAYLIST MODAL
+.create-playlist-modal {
+  position: relative;
+  top: 38%;
 }
 
 // X
