--- a/app/assets/stylesheets/api/createPlaylist.scss
+++ b/app/assets/stylesheets/api/createPlaylist.scss
@@ -99,6 +99,7 @@
   font-size: 12px;
   // opacity: 0.7;
   outline: none;
+  margin-left: 50px;
 }
 .playlist-cancel:hover {
   border: 2px solid white;
@@ -126,4 +127,10 @@
   transform: scale(1.05);
   background-color: #1ED761;
   transition-duration: 0.1s;
+}
+
+.add-to-playlist-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
