--- a/app/assets/stylesheets/api/artist_show.scss
+++ b/app/assets/stylesheets/api/artist_show.scss
@@ -2,7 +2,9 @@
   margin-left: 215px;
   height: 100vh;
   overflow: scroll;
-  background: linear-gradient(to bottom right, #324455, black);
+  // background: linear-gradient(to bottom right, #324455, black);
+  // background: linear-gradient(to bottom right, #2C555A, black);
+  background: linear-gradient(to bottom right, #402929, black);
   display: flex;
   flex-direction: column;
   padding-bottom: 200px;
