Change hover background color to black

--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -26,7 +26,8 @@
 }
 
 .li-songs:hover {
-  background-color: rgba(4, 0, 255, 0.178);
+  background-color: rgba(0, 0, 0, 0.342);
+  // background-color: rgba(4, 0, 255, 0.178);
 }
 
 .song-title {
