--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -53,3 +53,10 @@
   letter-spacing: 1px;
   opacity: 0.8;
 }
+
+.search-tabs {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
