Add songDurationGreen CSS

--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -235,3 +235,11 @@
   padding-left: 20px;
   cursor: default;
 }
+
+.song-duration-green {
+  color: #1DD761;
+  font-size: 15px;
+  letter-spacing: 0.7px;
+  padding-left: 20px;
+  cursor: default;
+}
